@@ -1,3 +1,13 @@
+2009-03-29  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/epdf_document.cpp:
+	* src/lib/epdf_main.cpp:
+	move initialization of globalParams from
+	epdf_document to epdf_main
+
+	* src/lib/epdf_page.cpp:
+	initialize list to NULL
+
 2009-03-28  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/bin/epdf_evas_test.c:
